# social-network-starnavi

./: .dockerignore  .gitignore  Makefile  README.md  bot.ipynb  pyproject.toml
backend/: celery.py  urls.py
backend/apps/api/: __init__.py  urls.py
backend/apps/api/analytics/: serializers.py  urls.py  views.py
backend/apps/api/articles/: serializers.py  urls.py  views.py
backend/apps/api/base/: views.py
backend/apps/api/users/: serializers.py  urls.py  views.py
backend/apps/db/articles/: __init__.py  admin.py  apps.py  models.py
backend/apps/db/articles/migrations/: 0001_initial.py  0002_initial.py
backend/apps/db/base/: models.py
backend/apps/db/users/: __init__.py  admin.py  apps.py  forms.py  managers.py  models.py
backend/apps/db/users/migrations/: 0001_initial.py
backend/apps/service/: __init__.py  apps.py
backend/apps/service/management/commands/: create_superuser.py
backend/settings/: __init__.py  base.py
backend/settings/components/: _apps.py  _base.py  _database.py  _jazzmin.py  _locals.py  _middleware.py  _paths.py  _rest.py  _static.py  _templates.py
backend/settings/tools/: utils.py
docker/: wait-for.sh
docker/compose/: docker-compose.local.yml
docker/db/: init.sql
docker/django/: Dockerfile
docker/environment/: app.local.env  bot.local.env  db.local.env
docker/notebook/: Dockerfile  notebook.sh  startup_notebook.py
